workshop04/wordpress.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wordpress-sts
  labels:
    name: wordpress-sts
spec:
  selector:
    matchLabels:
      name: wordpress-po
  replicas: 1
  serviceName: wordpress-hsvc
  volumeClaimTemplates:
  - metadata:
      name: wordpress-pvc
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: do-block-storage
  template:
    metadata:
      name: wordpress-po
      labels:
        name: wordpress-po
    spec:
      # volumes: 
      # - name: wordpress-vol
      #   persistentVolumeClaim:
      #     claimName: wordpress-pvc
      containers:
      - name: wordpress
        image: wordpress
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: wordpress-pvc
            mountPath: /var/www/html
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  labels:
    name: wordpress-svc
spec:
  type: ClusterIP
  selector:
    name: wordpress-po
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-hsvc
  labels:
    name: wordpress-hsvc
spec:
  clusterIP: None
  selector:
    name: wordpress-po
  ports:
  - port: 80
    targetPort: 80
